# advent_of_code_2025

./: .gitignore  pyproject.toml
01/1/: main.py  test_main_01_1.py
01/2/: main.py  test_main_01_2.py
02/1/: main.py  test_main_02_1.py
02/2/: main.py  test_main_02_2.py
03/1/: main.py  test_main_03_1.py
03/2/: main.py  test_main_03_2.py
04/1/: main.py  test_main_04_1.py
04/2/: main.py  test_main_04_2.py
05/1/: main.py  test_main_05_1.py
05/2/: main.py  test_main_05_2.py
06/1/: main.py  test_main_06_1.py
06/2/: main.py  test_main_06_2.py
07/1/: main.py  test_main_07_1.py
07/2/: main.py  test_main_07_2.py
08/1/: main.py  test_main_08_1.py
08/2/: main.py  test_main_08_2.py
09/1/: main.py  test_main_09_1.py
09/2/: main.py  test_main_09_2.py
10/1/: main.py  test_main_10_1.py
10/2/: main.py  test_main_10_2.py
11/1/: main.py  test_main_11_1.py
11/2/: main.py  test_main_11_2.py
12/1/: main.py
utils/: __main__.py
