[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "And a happy new year!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "mypy>=1.19.0",
]
